--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     The app only requests the minimal permissions needed to function, and all advertising integrations strictly follow Google Play policies.  
     You can view the full privacy policy at the link below.
   </p>
-  <a class="btn" href="privacy-policy.md">View Privacy Policy</a>
+  <a class="btn" href="privacy-policy.html">View Privacy Policy</a>
 </main>
 
 <footer>
